force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Settings__mdt/cgc_sync__Sync_Mobile_App_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Holds feature related information</description>
    <label>Mobile App Setting</label>
    <pluralLabel>Mobile App Settings</pluralLabel>
</CustomObject>