force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Settings__mdt/fields/cgc_sync__Authentication_Method__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Authentication_Method__c</fullName>
    <description>User authentication approach.</description>
    <label>Authentication Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>