force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Settings__mdt/fields/cgc_sync__Digits__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Digits__c</fullName>
    <description>The number of digits for unlocking the device.</description>
    <label>Digits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <default>true</default>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>