force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Settings__mdt/fields/cgc_sync__Launch_Url__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Launch_Url__c</fullName>
    <description>QR code url</description>
    <inlineHelpText>connected app URL</inlineHelpText>
    <label>Launch Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>