force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Settings__mdt/fields/cgc_sync__Max_Binary_File_Size__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Max_Binary_File_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number (1 to 40 MB).
Default: 10 MB
Lower Limit: 1 MB
Upper Limit: 40MB</description>
    <label>Max Binary File Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>