force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Settings__mdt/fields/cgc_sync__Offline_Activity_Timer__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Offline_Activity_Timer__c</fullName>
    <defaultValue>72</defaultValue>
    <description>The maximum amount of time (in Hours) user can work in offline mode on device.</description>
    <inlineHelpText>The maximum amount of time User can work in Offline mode on device. Value in Hours. Default: 72, Lower Limit: 1, Upper Limit: 1440</inlineHelpText>
    <label>Offline Activity Timer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>