force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Settings__mdt/fields/cgc_sync__Pin_Protect__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Pin_Protect__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activation of the pin protection feature to force the user to re-enter the PIN after a defined inactivity time interval.
Default behavior: feature is disabled.</description>
    <label>Pin Protect</label>
    <type>Checkbox</type>
</CustomField>